# PlugDev

./: .gitignore  README.md  clean.bat
PlugDev/PlugProject/Dll/: PlugProject.sln  PlugProject.vcxproj
PlugDev/PlugProject/Src/: PlugProject.h
PlugDev/PlugProject/Test/: Test.vcxproj
PlugDev/PlugProject/WinTest/: WinTest.vcxproj
PlugDev/Tool/Tool/: I_Tool.h
PlugDev/Tool/Tool/Dll/: Tool.sln  Tool.vcxproj
PlugDev/Tool/Tool/Src/: Tool.cpp  Tool.h  Tool_Function.cpp
PlugDev/Tool/Tool/Test/: Test.cpp  Test.vcproj
PlugDev/Tool/ToolMui/: I_ToolMui.H
PlugDev/Tool/ToolMui/Dll/: ToolMui.cbproj
PlugDev/Tool/ToolMui/Src/: ToolMui.cpp  ToolMui.h  Unit1.cpp  Unit1.dfm  Unit1.h  Unit2.cpp  Unit2.dfm  Unit2.h
PlugDev/Tool/ToolMui/Test/: Test.cpp  Test.vcproj
PlugTool/sys/: Dir.ini  Microsoft.Cpp.x64.user.props
PlugTool/sys/PlugProject-vc11/: I_PlugProject.h
PlugTool/sys/PlugProject-vc12/: I_PlugProject.h
PlugTool/sys/PlugProject-vc7/: I_PlugProject.h
PlugTool/sys/PlugProject-vs2019_makefile/: CMakeLists.txt
PlugTool/sys/PlugProject-vs2019_makefile/Dll/: CMakeLists.txt  PlugProject.vcxproj
PlugTool/sys/PlugProject-vs2019_makefile/Test/: CMakeLists.txt  Test.vcxproj
PlugTool/sys/PlugProject-vs2022/: I_PlugProject.h
include/plug/: plug.h  plug_standard.h  read_me.txt
include/plug/helper/: app.h  is_utf8.h  log.h  plug_module_mgr.h  plug_share_data.h
include/plug/init/: filesystem.h  init.h  plug_load_dll.h
include/plug/platform/: linux_plug_platform.h  plug_platform.h  unreal_plug_platform.h  windows_plug_platform.h
(+146 files in other folders)
